fix #6 adjust margin on mobile screen

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,10 +44,10 @@ a {
 	align-items: flex-start;
 	margin: 0 auto;
 	gap: 2rem;
-	padding: 0 1.2rem;
+	padding: 0 0.8rem;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
 	.total-container {
 		flex-direction: row;
 		justify-content: center;
